eww: Further alignment fixes with clock and hyprlock clock

--- a/eww/scss/windows/desktop.scss
+++ b/eww/scss/windows/desktop.scss
@@ -5,7 +5,7 @@
     background-color: black;
     .clock {
         color: transparentize(white, 0.5);
-        padding: 200px;
+        padding: 220px;
         .time {
             .hour, .minutes, .separator{
                 font-size: 180pt;
